--- a/assets/sass/tweet.sass
+++ b/assets/sass/tweet.sass
@@ -51,6 +51,8 @@ body
       border-radius: 5px
       float: left
       margin-right: 10px
+      width: 50px
+      height: 50px
 
     &-name /* this equals ".tweet--user-name" */
       font-weight: bold
